trying to fix sms on iphone

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>{{ title }}</h1>
             <p>{{ content }}</p>
           </div>
-          <div class="header-img"><img src="header-img.png" v-bind:alt="headerIMG"/></div><a href="sms:3040;body=TG">
+          <div class="header-img"><img src="header-img.png" v-bind:alt="headerIMG"/></div><a href="sms:/3040&amp;body=TG">
             <button class="btn">{{ ctaBtn1 }}</button></a>
         </div>
       </header>
