--- a/index.html
+++ b/index.html
@@ -16,8 +16,29 @@
             <h1>{{ title }}</h1>
             <p>{{ content }}</p>
           </div>
-          <div class="header-img"><img src="header-img.png" v-bind:alt="headerIMG"/></div><a href="sms:/3040&body=TG">
-            <button class="btn">{{ ctaBtn1 }}</button></a>
+          <!-- for iOS -->
+          <script>
+            function getMobileOperatingSystem() {
+              var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+
+                if (/android/i.test(userAgent)) {
+                    document.getElementById("smsButton").href = "sms:3040?body=TG";
+                }
+
+                // iOS detection from: http://stackoverflow.com/a/9039885/177710
+                if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+                    document.getElementById("smsButton").href = "sms:/3040&body=TG";
+                }
+
+                return "unknown";
+            }
+          </script>
+          <div class="header-img">
+            <img src="header-img.png" v-bind:alt="headerIMG"/>
+          </div>
+          <a id="smsButton">
+            <button class="btn">{{ ctaBtn1 }}</button>
+            </a>
         </div>
       </header>
       <section class="features">
