--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="style.css"/>
   <script type="text/javascript" src="vue.js"></script>
+  <script>
+    function getMobileOperatingSystem() {
+      var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+
+        if (/android/i.test(userAgent)) {
+            document.getElementById("smsButton").setAttribute("href", "sms:3040?body=TG");
+            console.log("android");
+        }
+
+        // iOS detection from: http://stackoverflow.com/a/9039885/177710
+        if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+            document.getElementById("smsButton").setAttribute("href", "sms:/3040&body=TG");
+        }
+
+        return "unknown";
+    }
+  </script>
   <title>VUE.js for LP</title>
 </head>
 <body>
@@ -17,22 +34,6 @@
             <p>{{ content }}</p>
           </div>
           <!-- for iOS -->
-          <script>
-            function getMobileOperatingSystem() {
-              var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-
-                if (/android/i.test(userAgent)) {
-                    document.getElementById("smsButton").href = "sms:3040?body=TG";
-                }
-
-                // iOS detection from: http://stackoverflow.com/a/9039885/177710
-                if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-                    document.getElementById("smsButton").href = "sms:/3040&body=TG";
-                }
-
-                return "unknown";
-            }
-          </script>
           <div class="header-img">
             <img src="header-img.png" v-bind:alt="headerIMG"/>
           </div>
