--- a/index.html
+++ b/index.html
@@ -8,23 +8,19 @@
   <script>
     function getMobileOperatingSystem() {
       var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-
         if (/android/i.test(userAgent)) {
             document.getElementById("smsButton").setAttribute("href", "sms:3040?body=TG");
             console.log("android");
         }
-
         // iOS detection from: http://stackoverflow.com/a/9039885/177710
         if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
             document.getElementById("smsButton").setAttribute("href", "sms:/3040&body=TG");
         }
-
-        return "unknown";
     }
   </script>
   <title>VUE.js for LP</title>
 </head>
-<body>
+<body onload="getMobileOperatingSystem()">
   <div id="app">
     <div id="wrapper" v-cloak="v-cloak">
       <header>
