--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   <script>
     function success() {
     	setTimeout(function(){
-    		window.location = "sms-sent.html";
+    		window.location = "sucesso.html";
     	}, 200)
     }
   </script>
   <title>VUE.js for LP</title>
 </head>
-<body>
+<body onload="getMobileOperatingSystem()">
   <div id="app">
     <div id="wrapper" v-cloak="v-cloak">
       <header>
@@ -35,7 +35,7 @@
             <h1>{{ title }}</h1>
             <p>{{ content }}</p>
           </div>
-          <div class="header-img"><img src="header-img.png" v-bind:alt="headerIMG"/></div><a>
+          <div class="header-img"><img src="header-img.png" v-bind:alt="headerIMG"/></div><a href="#">
             <button class="btn">{{ ctaBtn1 }}</button></a>
         </div>
       </header>
