--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h1>{{ title }}</h1>
             <p>{{ content }}</p>
           </div>
-          <div class="header-img"><img src="header-img.png" v-bind:alt="headerIMG"/></div><a href="#">
+          <div class="header-img"><img src="header-img.png" v-bind:alt="headerIMG"/></div><a onclick="success()">
             <button class="btn">{{ ctaBtn1 }}</button></a>
         </div>
       </header>
